--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <link rel="stykesheet" href="..\css\sample.css">
 
 
-    <!-- Make day 1 to 31 -->
+    <!-- May's Make day 1 to 31 -->
     <% let setday = []; %>
     <% for (let y = 1; y <= 31; y++){ %>
     <% if (y <= 9) { %>
@@ -16,26 +16,81 @@
     <% } %>
     <% } %>
 
+    <!-- June's Make day 1 to 31 -->
+    <% let june_setday = []; %>
+    <% for (let y = 1; y <= 30; y++){ %>
+    <% if (y <= 9) { %>
+    <% june_setday[y] = ("2020-06-0"+y); %>
+    <% } else{ %>
+    <% june_setday[y] = ("2020-06-"+y); %>
+    <% } %>
+    <% } %>
+
+    <!-- July's Make day 1 to 31 -->
+    <% let july_setday = []; %>
+    <% for (let y = 1; y <= 31; y++){ %>
+    <% if (y <= 9) { %>
+    <% july_setday[y] = ("2020-07-0"+y); %>
+    <% } else{ %>
+    <% july_setday[y] = ("2020-07-"+y); %>
+    <% } %>
+    <% } %>
+
+
     <!-- "日付と月を引数で送ればよい" -->
-    <% function planon(i){ %>
-        <% let re = "";%>
-        <% let targetday = new Date(2020,4,i);%>
+    <% function planon(i,m){ %>
+        <!-- May,June,Julyの仕分け -->
+        <% if (m == 4){ %> 
+            <% let re ='/create/'+setday[i];%>
+        <% } else if (m == 5) { %>
+            <% let re ='/create/'+june_setday[i];%>
+        <% } else { %>
+            <% let re ='/create/'+july_setday[i];%>
+        <% } %>
+         <!-- 予定初期化 -->
+        <% let targetday = new Date(2020,m,i);%>
         <% targetday.setDate(i+1);%>
         <% targetday = targetday.toISOString().split("T")[0];%>
-         <% for(var j of content) { %>
+        <%console.log(targetday);%>
+        <!-- dateデータの有無を確認 -->
+        <% for(var j of content) { %>
             <% let stday1 = targetday.toString(); %>
             <%console.log(stday1,"||||",j.date);%>
             <% if (stday1 == j.date ){ %>
                 <% re = '/edit/'+j.id; %>
-            <% } else { %>
-                <% re = '/create/'+setday[i]; %>
+                <% break %>
             <% } %>
         <% } %>
         <% return re ; %>
     <% } %>
 
+    <!-- "planの引数から予定を返却" -->
+    <% function planmake(i,m){ %>
+        <!-- 予定初期化 -->
+        <% let pm = "##";%>
+        <% let targetday = new Date(2020,m,i);%>
+        <% targetday.setDate(i+1);%>
+        <% targetday = targetday.toISOString().split("T")[0];%>
+        <!-- planデータの有無を確認 -->
+        <% for(var j of content) { %>
+            <% let stday1 = targetday.toString(); %>
+            <%console.log(stday1,"||||",j.date);%>
+            <% if (stday1 == j.date ){ %>
+                <% pm = j.plan; %>
+                <% return pm; %>
+                <% break %>
+            <% } %>
+        <% } %>
+        <% return pm ; %>
+    <% } %>
+
 
 <body>
+
+    <!-- May -->
+
+    <% let m = 4 %>
+
     <h1>中間報告書 Calender</h1>
     <table border="1">
         5月
@@ -53,37 +108,139 @@
             <% if(i<=5) { %>
             <th>&nbsp;</th>
             <% } else { %>
-            <contents class="date"></contents>
-            <th><a href="<%=planon(i-5) %>"><p><%= i-5; %></p><%=content[i-5].plan %></a></th>
-            <!-- <th><a href="/edit/<%=content[i-6].id %>"><p><%=i-5%></p><%=content[i-6].plan %></a></th> -->
+            <!-- <contents class="date"></contents> -->
+            <th><a href="<%= planon(i-5,m) %>"><p><%= i-5; %></p><%=planmake(i-5,m) %></a></th>
             <% } %>
             <% } %>
             </th>
         </tr>
         <tr>
             <% for(let i = 3; i <= 9; i++) { %>
-            <th><a href="<%=planon(i) %>"><%= i; %></a></th>
+            <th><a href="<%= planon(i,m) %>"><p><%= i; %></p><%=planmake(i,m) %></a></th>
             <% } %>
         </tr>
         <tr>
             <% for(let i = 10; i <= 16; i++) {%>
-            <th><a href="/create/<%=setday[i];%>"><%= i; %></a></th>
+            <th><a href="<%= planon(i,m) %>"><p><%= i; %></p><%=planmake(i,m) %></a></th>
             <% } %>
         </tr>
         <tr>
             <% for(let i = 17; i <= 23; i++) { %>
-            <th><a href="/create/<%=setday[i];%>"><%= i; %></a></th>
+                <th><a href="<%= planon(i,m) %>"><p><%= i; %></p><%=planmake(i,m) %></a></th>
             <% } %>
         </tr>
         <tr>
             <% for(let i = 24; i <= 30; i++) { %>
-            <th><a href="/create/<%=setday[i];%>"><%= i; %></a></th>
+                <th><a href="<%= planon(i,m) %>"><p><%= i; %></p><%=planmake(i,m) %></a></th>
             <% } %>
         </tr>
         <tr>
             <% for(let i = 31; i <= 37; i++) { %>
             <% if(i<=31) { %>
-            <th><a href="/create/<%=setday[i];%>"><%= i; %></a></th>
+                <th><a href="<%= planon(i,m) %>"><p><%= i; %></p><%=planmake(i,m) %></a></th>
+            <% } else { %>
+            <th>&nbsp;</th>
+            <% } %>
+            <% } %>
+        </tr>
+    </table>
+
+    <br>
+<!-- June -->
+    <br>
+
+    <table border="2">
+        6月
+
+        <% array = ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"]; %>
+        <tr>
+            <% for(let i = 0; i <= 6; i++){ %>
+            <td>
+                <%= array[i]; %>
+            </td>
+            <% } %>
+        </tr>
+        <tr>
+            <% for(let i = 1; i <= 7; i++) { %>
+            <% if(i==1) { %>
+            <th>&nbsp;</th>
+            <% } else { %>
+            <th><a href="<%= planon(i-1,m+1) %>"><p><%= i-1; %></p><%=planmake(i-1,m+1) %></a></th>
+            <% } %>
+            <% } %>
+            </th>
+        </tr>
+        <tr>
+            <% for(let i = 7; i <= 13; i++) { %>
+            <th><a href="<%= planon(i,m+1) %>"><p><%= i; %></p><%=planmake(i,m+1) %></a></th>
+            <% } %>
+        </tr>
+        <tr>
+            <% for(let i = 14; i <= 20; i++) {%>
+            <th><a href="<%= planon(i,m+1) %>"><p><%= i; %></p><%=planmake(i,m+1) %></a></th>
+            <% } %>
+        </tr>
+        <tr>
+            <% for(let i = 21; i <= 27; i++) { %>
+            <th><a href="<%= planon(i,m+1) %>"><p><%= i; %></p><%=planmake(i,m+1) %></a></th>
+            <% } %>
+        </tr>
+        <tr>
+            <% for(let i = 28; i <= 34; i++) { %>
+            <% if(i<=30) { %>
+            <th><a href="<%= planon(i,m+1) %>"><p><%= i; %></p><%=planmake(i,m+1) %></a></th>    
+            <% } else { %>
+            <th>&nbsp;</th>
+            <% } %>
+            <% } %>
+        </tr>
+    </table>
+
+    <br>
+<!-- July -->
+    <br>
+
+    <table border="3">
+        7月
+
+        <% array = ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"]; %>
+        <tr>
+            <% for(let i = 0; i <= 6; i++){ %>
+            <td>
+                <%= array[i]; %>
+            </td>
+            <% } %>
+        </tr>
+        <tr>
+            <% for(let i = 1; i <= 7; i++) { %>
+            <% if(i<=3) { %>
+            <th>&nbsp;</th>
+            <% } else { %>
+            <!-- <contents class="date"></contents> -->
+            <th><a href="<%= planon(i-3,m+2) %>"><p><%= i-3; %></p><%=planmake(i-3,m+2) %></a></th>
+            <% } %>
+            <% } %>
+            </th>
+        </tr>
+        <tr>
+            <% for(let i = 5; i <= 11; i++) { %>
+            <th><a href="<%= planon(i,m+2) %>"><p><%= i; %></p><%=planmake(i,m+2) %></a></th>
+            <% } %>
+        </tr>
+        <tr>
+            <% for(let i = 12; i <= 18; i++) {%>
+                <th><a href="<%= planon(i,m+2) %>"><p><%= i; %></p><%=planmake(i,m+2) %></a></th>
+            <% } %>
+        </tr>
+        <tr>
+            <% for(let i = 19; i <= 25; i++) { %>
+                <th><a href="<%= planon(i,m+2) %>"><p><%= i; %></p><%=planmake(i,m+2) %></a></th>
+            <% } %>
+        </tr>
+        <tr>
+            <% for(let i = 26; i <= 32; i++) { %>
+            <% if(i<=31) { %>
+                <th><a href="<%= planon(i,m+2) %>"><p><%= i; %></p><%=planmake(i,m+2) %></a></th>
             <% } else { %>
             <th>&nbsp;</th>
             <% } %>
