--- a/css/sample.css
+++ b/css/sample.css
@@ -1,22 +1,4 @@
-h1 {
-    font-size: 18px;
-}
-
-table {
-    border-spacing: 0;
-    border-collapse: collapse;
-}
-
-td {
-    border: 1px solid #ddd;
-    padding: 5px;
-    text-align: center;
-}
-
-td:first-child {
-    color: red;
-}
-
-td:last-child {
-    color: royalblue;
+table.calender_display{
+    border: solid 1px hsl(0, 76%, 61%);
+    border-collapse: separate;
 }
