--- a/views/form.ejs
+++ b/views/form.ejs
@@ -9,7 +9,8 @@
 <form action="/" method="POST">
     
     date <input type="date" name="date" value="<%=day%>"><br>
-    plan <input type="text" name="plan"><br>
+    plan <input type="text" name="plan" maxlength="20"><br>
+
     <button type="submit">送信</button>
 </form>
 </body>
