--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <link rel="stykesheet" href="..\css\sample.css">
 
 
-    <!-- May's Make day 1 to 31 -->
+    <%#  May's Make day 1 to 31 %>
     <% let setday = []; %>
     <% for (let y = 1; y <= 31; y++){ %>
     <% if (y <= 9) { %>
@@ -16,7 +16,7 @@
     <% } %>
     <% } %>
 
-    <!-- June's Make day 1 to 31 -->
+    <%#  June's Make day 1 to 31 %>
     <% let june_setday = []; %>
     <% for (let y = 1; y <= 30; y++){ %>
     <% if (y <= 9) { %>
@@ -26,7 +26,7 @@
     <% } %>
     <% } %>
 
-    <!-- July's Make day 1 to 31 -->
+    <%#  July's Make day 1 to 31 %>
     <% let july_setday = []; %>
     <% for (let y = 1; y <= 31; y++){ %>
     <% if (y <= 9) { %>
@@ -39,20 +39,21 @@
 
     <!-- "日付と月を引数で送ればよい" -->
     <% function planon(i,m){ %>
-        <!-- May,June,Julyの仕分け -->
+        <%# May,June,Julyの仕分け%>
+        <% let re = "";%> 
         <% if (m == 4){ %> 
-            <% let re ='/create/'+setday[i];%>
+            <% re ='/create/'+setday[i];%>
         <% } else if (m == 5) { %>
-            <% let re ='/create/'+june_setday[i];%>
+            <% re ='/create/'+june_setday[i];%>
         <% } else { %>
-            <% let re ='/create/'+july_setday[i];%>
+            <% re ='/create/'+july_setday[i];%>
         <% } %>
-         <!-- 予定初期化 -->
+         <%# 予定初期化 %>
         <% let targetday = new Date(2020,m,i);%>
         <% targetday.setDate(i+1);%>
         <% targetday = targetday.toISOString().split("T")[0];%>
         <%console.log(targetday);%>
-        <!-- dateデータの有無を確認 -->
+        <%# dateデータの有無を確認 %>
         <% for(var j of content) { %>
             <% let stday1 = targetday.toString(); %>
             <%console.log(stday1,"||||",j.date);%>
@@ -64,14 +65,14 @@
         <% return re ; %>
     <% } %>
 
-    <!-- "planの引数から予定を返却" -->
+    <%#  "planの引数から予定を返却" %>
     <% function planmake(i,m){ %>
-        <!-- 予定初期化 -->
-        <% let pm = "##";%>
+        <%#  予定初期化 %>
+        <% let pm = "";%>
         <% let targetday = new Date(2020,m,i);%>
         <% targetday.setDate(i+1);%>
         <% targetday = targetday.toISOString().split("T")[0];%>
-        <!-- planデータの有無を確認 -->
+        <%#  planデータの有無を確認 %>
         <% for(var j of content) { %>
             <% let stday1 = targetday.toString(); %>
             <%console.log(stday1,"||||",j.date);%>
@@ -87,12 +88,14 @@
 
 <body>
 
-    <!-- May -->
+    <%#  May %>
 
     <% let m = 4 %>
 
     <h1>中間報告書 Calender</h1>
-    <table border="1">
+    
+    <%# css が読み込まれない ↓↓↓%>
+    <table class = "calender_display">
         5月
 
         <% let array = ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"]; %>
@@ -108,8 +111,8 @@
             <% if(i<=5) { %>
             <th>&nbsp;</th>
             <% } else { %>
-            <!-- <contents class="date"></contents> -->
-            <th><a href="<%= planon(i-5,m) %>"><p><%= i-5; %></p><%=planmake(i-5,m) %></a></th>
+            <%#  <contents class="date"></contents> %>
+            <th><a href="<%= planon(i-5,m); %>"><p><%= i-5; %></p><%=planmake(i-5,m) %></a></th>
             <% } %>
             <% } %>
             </th>
@@ -143,13 +146,15 @@
             <% } %>
             <% } %>
         </tr>
+
+        <table wigth = "300" height = "100">
     </table>
 
     <br>
-<!-- June -->
+<%# June %>
     <br>
 
-    <table border="2">
+    <table border="1">
         6月
 
         <% array = ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"]; %>
@@ -197,10 +202,10 @@
     </table>
 
     <br>
-<!-- July -->
+<%#  July %>
     <br>
 
-    <table border="3">
+    <table border="1">
         7月
 
         <% array = ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"]; %>
@@ -216,7 +221,6 @@
             <% if(i<=3) { %>
             <th>&nbsp;</th>
             <% } else { %>
-            <!-- <contents class="date"></contents> -->
             <th><a href="<%= planon(i-3,m+2) %>"><p><%= i-3; %></p><%=planmake(i-3,m+2) %></a></th>
             <% } %>
             <% } %>
